test-suite/tests/roundtrip/invalid/syntax/multiple/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/multiple/01/input.essence:1:1:
  |
1 | language ESSENCE' 1.0
  | ^^^^^^^^^^^^^^^^^^^^^
Warning: Essence prime file detected, type checking is off

tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing Domain

tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing )

tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing ]

tests/roundtrip/invalid/syntax/multiple/01/input.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of int(0..undefined(division by zero: 3 / 0 : `int`))
   |                                                      ^
Missing of

tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing Domain

tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing )

tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing ]

tests/roundtrip/invalid/syntax/multiple/01/input.essence:12:54:
   |
12 |         matrix indexed by [int(1..undefined(division by zero: 5 / 0 : `int`))] of bool
   |                                                      ^
Missing of

